@@ -7,27 +7,32 @@ export MAIN_DIALOG='
 	<vbox>
 		<edit editable="false">
 			<variable>EDITOR2</variable>
-			<width>350</width><height>50</height>
+			<height>50</height>
+			<width>350</width>
 			<default>editable is false</default>
 		</edit>
 		<edit accepts-tab="false">
 			<variable>EDITOR1</variable>
-			<width>350</width><height>50</height>
+			<height>50</height>
+			<width>350</width>
 			<default>accepts-tab is false</default>
 		</edit>
 		<edit indent="25">
 			<variable>EDITOR2</variable>
-			<width>350</width><height>50</height>
+			<height>50</height>
+			<width>350</width>
 			<default>indent is 25</default>
 		</edit>
 		<edit left-margin="25" right-margin="25">
 			<variable>EDITOR2</variable>
-			<width>350</width><height>50</height>
+			<height>50</height>
+			<width>350</width>
 			<default>left-margin and right-margin is 25</default>
 		</edit>
 		<edit cursor-visible="false">
 			<variable>EDITOR2</variable>
-			<width>350</width><height>50</height>
+			<height>50</height>
+			<width>350</width>
 			<default>cursor-visible is false</default>
 		</edit>
 		<hbox>
